tests/baselines/reference/declFileTypeAnnotationVisibilityErrorAccessors(target=es2015).errors.txt
declFileTypeAnnotationVisibilityErrorAccessors.ts(16,13): error TS2322: Type 'undefined' is not assignable to type 'private1'.
declFileTypeAnnotationVisibilityErrorAccessors.ts(37,13): error TS2322: Type 'undefined' is not assignable to type 'private1'.
declFileTypeAnnotationVisibilityErrorAccessors.ts(44,13): error TS2322: Type 'undefined' is not assignable to type 'public1'.
declFileTypeAnnotationVisibilityErrorAccessors.ts(65,13): error TS2322: Type 'undefined' is not assignable to type 'public1'.
declFileTypeAnnotationVisibilityErrorAccessors.ts(72,13): error TS2322: Type 'undefined' is not assignable to type 'public2'.
declFileTypeAnnotationVisibilityErrorAccessors.ts(93,13): error TS2322: Type 'undefined' is not assignable to type 'public2'.


==== declFileTypeAnnotationVisibilityErrorAccessors.ts (6 errors) ====
    namespace m {
        class private1 {
        }
    
        export class public1 {
        }
    
        namespace m2 {
            export class public2 {
            }
        }
    
        export class c {
            // getter with annotation
            get foo1(): private1 {
                return;
                ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'private1'.
            }
    
            // getter without annotation
            get foo2() {
                return new private1();
            }
    
            // setter with annotation
            set foo3(param: private1) {
            }
    
            // Both - getter without annotation, setter with annotation
            get foo4() {
                return new private1();
            }
            set foo4(param: private1) {
            }
    
            // Both - with annotation
            get foo5(): private1 {
                return;
                ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'private1'.
            }
            set foo5(param: private1) {
            }
    
            // getter with annotation
            get foo11(): public1 {
                return;
                ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'public1'.
            }
    
            // getter without annotation
            get foo12() {
                return new public1();
            }
    
            // setter with annotation
            set foo13(param: public1) {
            }
    
            // Both - getter without annotation, setter with annotation
            get foo14() {
                return new public1();
            }
            set foo14(param: public1) {
            }
    
            // Both - with annotation
            get foo15(): public1 {
                return;
                ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'public1'.
            }
            set foo15(param: public1) {
            }
    
            // getter with annotation
            get foo111(): m2.public2 {
                return;
                ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'public2'.
            }
    
            // getter without annotation
            get foo112() {
                return new m2.public2();
            }
    
            // setter with annotation
            set foo113(param: m2.public2) {
            }
    
            // Both - getter without annotation, setter with annotation
            get foo114() {
                return new m2.public2();
            }
            set foo114(param: m2.public2) {
            }
    
            // Both - with annotation
            get foo115(): m2.public2 {
                return;
                ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'public2'.
            }
            set foo115(param: m2.public2) {
            }
        }
    }
    